kube-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-webapp
  template:
    metadata:
      labels:
        app: simple-webapp
    spec:
      containers:
      - name: webapp
        image: "${_REGION}-docker.pkg.dev/${_PROJECT}/${_REPO}/simple-webapp:$SHORT_SHA"
        ports:
        - containerPort: 5000            # ← change this to whatever your Dockerfile EXPOSEs
        readinessProbe:
          httpGet:
            path: /
            port: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
